--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             <h3>Diki Wahyudi</h3>
             <p>Putra tercinta dari keluarga <br> Bapak Dedi dan Ibu Titi</p>
             <a href="https://www.instagram.com/diki6752/" 
-   target="_blank" 
-   rel="noopener noreferrer">
+   target="_blank">
    <i class="bi bi-instagram">@diki6752</i></a>
           </div>
           <div class="col-4">
@@ -130,8 +129,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             <h3>Shabania</h3>
             <p>Putri tercinta dari keluarga <br> Bapak Ramli dan Ibu Ningsih</p>
              <a href="https://www.instagram.com/sniaa1509/" 
-   target="_blank" 
-   rel="noopener noreferrer"><i class="bi bi-instagram">@sniaa1509</i></a>
+   target="_blank"><i class="bi bi-instagram">@sniaa1509</i></a>
           </div>
         </div>
       </div>
@@ -149,15 +147,9 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
 <h2>Informasi Acara</h2>
 <p class="alamat">Alamat Pelaksanaan Akad Nikah :  Tanjakan Sijompong Dusun Rambut Kasih Rt 04 / Rw 04 Desa Gumulung Tonggoh Kecamatan Greged Kabupaten Cirebon Jawa Barat. </p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3961.6170894185975!2d108.585014!3d-6.8163399999999985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNsKwNDgnNTguOCJTIDEwOMKwMzUnMDYuMSJF!5e0!3m2!1sid!2sid!4v1770866050852!5m2!1sid!2sid" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  <a href="https://www.google.com/maps?q=-6.816339,108.585014" 
-   target="_blank" 
-   rel="noopener noreferrer" class="btn btn-light btn-sm my-3">Klik untuk membuka peta</a>
-<br> <br> <p class="alamat">Alamat Resepsi Pernikahan : Rt 04 / Rw 05 Dusun buyut Blok Serongan Desa Gumulung Tonggoh Kecamatan Greged Kabupaten Cirebon Jawa Barat. </p>
+ <br> <br> <p class="alamat">Alamat Resepsi Pernikahan : Rt 04 / Rw 05 Dusun buyut Blok Serongan Desa Gumulung Tonggoh Kecamatan Greged Kabupaten Cirebon Jawa Barat. </p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3961.6386647882873!2d108.58941000000002!3d-6.8137289999999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNsKwNDgnNDkuNCJTIDEwOMKwMzUnMjEuOSJF!5e0!3m2!1sid!2sid!4v1770866214508!5m2!1sid!2sid" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  <a href="https://www.google.com/maps?q=-6.813729,108.589410" 
-   target="_blank" 
-   rel="noopener noreferrer" class="btn btn-light btn-sm my-3">Klik untuk membuka peta</a>
-  <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak ada tanda-tanda sedang dilangsungkan pernikahan, bisa jadi Anda salah jadwal atau salah tempat.</p>
+   <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak ada tanda-tanda sedang dilangsungkan pernikahan, bisa jadi Anda salah jadwal atau salah tempat.</p>
       </div>
     </div>
 
@@ -379,7 +371,7 @@ document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     <div class="row">
       <div class="col text-center">
         <small class="block">&copy; 2026 Nia Wedding. All Right Reserved.</small>
-        <small class="block">Design by <a href="https://instagram.com/sabilyputra12/" target="_blank">@sabilyputra12</a>.</small>
+        <small class="block">Design by <a href="https://instagram.com/sabilyputra12/" >@sabilyputra12</a>.</small>
        </div>
     </div>
   </div>
